iceberg/iceberg-handler/src/test/queries/negative/get_variant_non_existant_field.q
SELECT variant_get(parse_json('{"a": 1, "b": 2}'), '$.c');